// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`test Order/ResultCard should match snapshot 1`] = `
<ExecModeController
  executeMode="sqls"
  sqlComponent={
    <SQLMode
      onUpdateDescription={[MockFunction]}
      projectName="default"
      taskId="123"
    />
  }
  sqlFileComponent={
    <FileMode
      onUpdateDescription={[MockFunction]}
      projectName="default"
      taskId="123"
    />
  }
/>
`;

exports[`test Order/ResultCard should match snapshot 2`] = `
<ExecModeController
  executeMode="sql_file"
  sqlComponent={
    <SQLMode
      projectID="300200"
      taskId="123"
    />
  }
  sqlFileComponent={
    <FileMode
      projectID="300200"
      taskId="123"
    />
  }
/>
`;
